--- a/hooks/build
+++ b/hooks/build
@@ -1,2 +1,3 @@
 #!/bin/bash
-docker build --build-arg PYTHON=$PYTHON -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+echo $PYTHON_IMG
+docker build --build-arg PYTHON $PYTHON_IMG -f $DOCKERFILE_PATH -t $IMAGE_NAME .
